test/shouldnt-compile/const-swap.cpp
#include "common.hpp"


void check() {
  const Enums es1;
  Enums es2;
  es2.swap(es1);
}
